[gd_scene load_steps=6 format=3 uid="uid://drj1yi617kl5q"]

[ext_resource type="Script" path="res://scripts/game_control.gd" id="1_dovgo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ow08e"]
bg_color = Color(0.294118, 0.309804, 0.419608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pnp3b"]
bg_color = Color(0.6, 0.298039, 0.6, 0.392157)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3b66r"]
bg_color = Color(0.6, 0.298039, 0.6, 0.490196)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4vl4d"]
bg_color = Color(0.6, 0.298039, 0.6, 0.686275)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dovgo")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ow08e")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "Game menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Hire Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_pnp3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_3b66r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4vl4d")
text = "Hire"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Team Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_pnp3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_3b66r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4vl4d")
text = "Team"

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Battle Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_pnp3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_3b66r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4vl4d")
text = "Battle
"

[node name="Save Button" type="Button" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_pnp3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_3b66r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4vl4d")
text = "Save game
"

[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Hire Button" to="." method="_on_hire_button_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/Team Button" to="." method="_on_team_button_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/Battle Button" to="." method="_on_battle_button_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/Save Button" to="." method="_on_save_button_button_up"]
